syntax = "proto3";
option go_package = "/models";

package grpcgo.rpcservice;

import "person.proto";
import "google/api/annotations.proto";

message GetPersonRequest{
    string id = 1;
  }
  message GetPersonResponse{
    grpcgo.models.Person person = 1;
  }
  
  message SavePersonRequest{
    grpcgo.models.Person person = 1;
  }
  message SavePersonResponse{
    string id = 1;
  }

  message GetPersonStreamRequest{

  }
  message GetPersonStreamResponse{
    grpcgo.models.Person person = 1;
  }

  message UploadImageRequest {
    oneof data {
      ImageInfo info = 1;
      bytes chunk_data = 2;
    };
  }
  
  message ImageInfo {
    string person_id = 1;
    string image_type = 2;
  }
  
  message UploadImageResponse {
    string id = 1;
    uint32 size = 2;
  }
  service PersonService{
      rpc GetPerson(GetPersonRequest) returns (GetPersonResponse){
        option (google.api.http) = {
          get : "/v1/person/get"
        };
      }
      rpc SavePerson(SavePersonRequest)returns(SavePersonResponse){
        option (google.api.http) = {
          post : "/v1/person/save"
          body : "*"
        };
      }
      rpc GetPersonStream(GetPersonStreamRequest)returns(stream GetPersonStreamResponse){
        option (google.api.http) = {
          get : "/v1/person/list"
        };
      }
      rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse){
        option (google.api.http) = {
          post : "/v1/person/upload_image"
          body : "*"
        };
      }
  }